# 2024_Old_Code

./: README.md
final_model/: quner_INT8.xml
gary_msgs/: CMakeLists.txt  README.md  package.xml
gary_msgs/msg/: AerialRobotEnergy.msg  AutoAIM.msg  BulletRemaining.msg  ClientCommand.msg  ClientReceive.msg  CustomController.msg  DR16Receiver.msg  DartClientCmd.msg  DartRemainingTime.msg  DualLoopPID.msg  DualLoopPIDWithFilter.msg  FieldEvents.msg  GameResult.msg  GameStatus.msg  ICRABuffDebuffZoneAndLurkStatus.msg  ImageTransmitter.msg  InteractiveDataRecv.msg  InteractiveDataSend.msg  PID.msg  PIDWithFilter.msg  PowerHeat.msg  RFIDStatus.msg  RefereeWarning.msg  RobotBuff.msg  RobotHP.msg  RobotHurt.msg  RobotPosition.msg  RobotStatus.msg  ShootData.msg  SupplyProjectileAction.msg  SupplyProjectileRequest.msg
gary_msgs/srv/: ResetMotorPosition.srv  VisionModeSwitch.srv
qunerVISIONPack/: CMakeLists.txt  package.xml
qunerVISIONPack/src/: DxImageProc.h  GxIAPI.h  InferRequestPool.h  qunerCAM.h  qunerROS.h  qunerVINO.h  qunerVISIONode.cpp
